<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/purple_background">

    <!-- Register Title -->
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/jersey"
        android:text="@string/registerTitle"
        android:textColor="@color/white"
        android:textSize="45sp"/>

    <!-- Full name Field -->
    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:autofillHints="Full name"
        android:layout_marginTop="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Email Address Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name"
        android:autofillHints="email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:autofillHints="password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- ConfirmPassword Field -->
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:autofillHints="password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="18sp"/>

    <!-- Terms and Privacy -->
    <CheckBox
        android:id="@+id/termsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="0dp"
        android:layout_marginStart="35dp"
        android:text="@string/agree"
        android:textColor="@color/grey"
        android:fontFamily="@font/pixelify_sans"
        android:buttonTint="@color/grey"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacy_policy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/termsCheckbox"
        android:layout_alignBaseline="@id/termsCheckbox"
        android:layout_marginStart="4dp"
        android:text="@string/privacyPolicyLink"
        android:textColor="@color/blue"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <!-- Register Button -->
    <ImageButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginStart="30dp"
        android:background="@null"
        android:contentDescription="@string/register"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/register_button"
        app:tint="@null" />

    <!-- Login  -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/alreadyAccount"
        android:textColor="#10C6D6"
        android:fontFamily="@font/pixelify_sans"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/loginLinkButton"
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/jersey"
        android:drawableLeft="@drawable/arrow_icon"
        android:text="@string/loginButton" />


</RelativeLayout >