...
        android:text="@string/welcomeDesc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@null"
        app:srcCompat="@drawable/get_started"
        app:tint="@null" />
...
